--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "engines": {
         "vscode": "^1.38.0"
     },
-    "publisher": "Moez Romdhane",
+    "publisher": "moez-romdhane",
     "categories": [
         "Programming Languages"
     ],
