--- a/language-configuration.json
+++ b/language-configuration.json
@@ -14,6 +14,7 @@
         ["tant que", "fin_tant_que"],
         ["si", "fin_si"],
         ["selon", "fin_selon"],
+        ["répéter", "jusqu'à"],
         ["début", "fin"]
     ],
     // symbols that are auto closed when typing
@@ -31,11 +32,11 @@
         ["[", "]"],
         ["(", ")"],
         ["\"", "\""],
-        ["'", "'"],
-        ["début", "fin"]
+        ["'", "'"]//,
+       // ["début", "fin"]
     ],
 
-    "wordPattern": "(-?\\d*\\.\\d\\w*)|([^\\`\\~\\!\\@\\#\\%\\^\\&\\*\\(\\)\\-\\=\\+\\[\\{\\]\\}\\\\\\|\\;\\:\\'\\\"\\,\\.\\<\\>\\/\\?\\s]+)(?<!begin)(?<!fin)(?<!débutfin)",
+    "wordPattern": "(-?\\d*\\.\\d\\w*)|([^\\`\\~\\!\\@\\#\\%\\^\\&\\*\\(\\)\\-\\=\\+\\[\\{\\]\\}\\\\\\|\\;\\:\\'\\\"\\,\\.\\<\\>\\/\\?\\s]+)|((\\<\\-?\\-?)|(\\<\\=?)|(\\>\\=?)|(!\\=?))",
 
     "indentationRules": {
         "increaseIndentPattern": "^((?!\\/\\/).)*(\\{[^}\"'`]*|\\([^)\"'`]*|\\[[^\\]\"'`]*|début|répéter|faire|alors)$",
