--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
         "grammars": [{
             "language": "algo",
             "scopeName": "source.algo",
-            "path": "./syntaxes/algo.tmLanguage.json"
+            "path": "./syntaxes/algo.tmLanguage.json",
+            "embeddedLanguages": {
+                "meta.embedded.block.python": "python",
+                "meta.embedded.block.javascript": "javascript"
+              }            
         }],
         "snippets": [{
                 "language": "algo",
